<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">FM Radio</string>
    <string name="app_rx">FM Radio</string>
    <string name="app_tx">FM TX App</string>
    <string name="fmapp">FM Radio</string>
    <string name="stations">FM Radio Stations</string>
    <string name="txtplatform">V4L2 based solution for Android</string>
    <string name="lblversion">Version:</string>
    <string name="txtversion">1.0</string>
    <string name="app_rxtune">Enter Frequency</string>
    <string name="app_rxhelp">About</string>
    <string name="radioTxt" />
    <string name="mono">Mono</string>
    <string name="pgmSrv">Program Service</string>
    <string name="statusMsg" />
    <string name="notiMsg">Notification Message</string>
    <string name="btnOk">OK</string>
    <string name="btnCancel">Cancel</string>
    <string name="btnBack">Back</string>
    <string name="japaneseBand">Japanese Band</string>
    <string name="preEmphasis">Pre Emphasis Filter(Usec):</string>
    <string name="radioData">Radio data(RDS)</string>
    <string name="advanced">Advanced</string>
    <string name="rdsTransmit">RDS Transmit:</string>
    <string name="sec50">50</string>
    <string name="sec75">75</string>
    <string name="none">None</string>
    <string name="PS">PS</string>
    <string name="PS:">PS:</string>
    <string name="RT">RT</string>
    <string name="RT:">RT:</string>
    <string name="TP">TP</string>
    <string name="TP:">TP:</string>
    <string name="stereo">Stereo</string>
    <string name="rdsAf">RDS AF</string>
    <string name="app_rds">FM Configurations</string>
    <string name="freqRangeJapan">76MHz - 90MHz</string>
    <string name="freqRangeRussian">65.8MHz - 74MHz</string>
    <string name="freqRangeWeather">162.4MHz - 162.55MHz</string>
    <string name="label">MHz</string>
    <string name="labelhz">MHz</string>
    <string name="rx_freq_val" />
    <string name="Manual">Manual</string>
    <string name="Configure">Configure</string>
    <string name="Help">Help</string>
    <string name="enterFreq_Dialog">Enter Frequency</string>
    <string name="Stereo">Stereo</string>
    <string name="empty" />
    <string name="pty">Dynamic PTY</string>
    <string name="comp">Compression</string>
    <string name="picode">PI Code:</string>
    <string name="speed">Speed:</string>
    <string name="size">Size:</string>
    <string name="rdsmode">Enable Rds</string>
    <string name="ptycode">PTY Code:</string>
    <string name="dicode">Dicodes:</string>
    <string name="mute">Mute</string>
    <string name="unmute">Unmute</string>
    <string name="att">Att</string>
    <string name="station1">1</string>
    <string name="station2">2</string>
    <string name="station3">3</string>
    <string name="station4">4</string>
    <string name="station5">5</string>
    <string name="station6">6</string>
    <string name="station">Station</string>
    <string name="configure">Configure</string>
    <string name="exit">Exit</string>
    <string name="about">About</string>
    <string name="preset">Preset</string>
    <string name="rdsaf">Set RDS AF</string>
    <string name="wrapseek">Enable wrap seek</string>
    <string name="announcement">Announcement</string>
    <string name="TA">TA</string>
    <string name="connecting ">Connecting ....</string>
    <string name="seraching">Searching ....</string>
    <string name="tuning">Tuning</string>
    <string name="notsupported">Not supported!!!!</string>
    <string name="setfreq">Set Frequency</string>
    <string name="wait">Please wait!!!!</string>
    <string name="startFm">Starting FM!!!!</string>
    <string name="volume">Volume :</string>
    <string name="rssi">RSSI :</string>
    <string name="band">Band :</string>
    <string name="mode">Mode :</string>
    <string name="deemphasis">DEmp Filter:</string>
    <string name="rdssystem">RDS System:</string>
    <string name="seeking">Seeking ....</string>
    <string name="scaning">Scaning ....</string>
    <string name="CompScanRunning">Complete Scanning...</string>
    <string name="CompScanStop">STOP</string>
    <string name="playing">Playing ....</string>
    <string name="pstxt" />
    <string name="index">Index</string>
    <string name="freq">Freq</string>
    <string name="name" />
    <string name="channelSpace">Ch Space</string>
    <string name="compScan">Stations Search</string>
    <string name="compScanWarning">Complete Scan will delete all the Presets, Continue?</string>
    <string name="ContextMenu">ContextMenu</string>
    <string name="nolove_station">Remove Love Channel</string>
    <string name="nolove_station_yes">Yes</string>
    <string name="nolove_station_no">No</string>
    <string name="nolove_station_msg">If you want to remove Love Channel?</string>
    <string name="love_station_f">You can only love 6 stations</string>
    <string name="love_station">love</string>
    <string name="no_love_station">Remove Love Channel</string>
    <string name="rename_station">Rename</string>
    <string name="replace_station1">Replace?</string>
    <string name="love_already">The station you are loving!</string>
    <string name="No_station">No station found</string>
    <string name="delete_station1">Delete?</string>
    <string name="rename_station1">Rename?</string>
    <string name="wait_info">Please wait...</string>
    <string name="power_on_info">Powering on Radio</string>
    <string name="enable_fail">Cannot enable Radio!!!!</string>
    <string name="new_name_cannot_empty">New station name can not be empty</string>
    <string name="fm_cmd_failed_airplane_mode">FM operation failed when in Airplane mode</string>
    <string name="fm_cmd_dailed_no_headset">Please plug in a Headset to use FM radio</string>
    <string name="fm_close_when_airplane_mode">FM will close for phone in Airplane mode</string>
    <string name="fm_cmd_failed_call_on">FM operation failed. FM radio is not allowed during call.</string>
    <string name="fm_command_failed_title">FM Operation failed</string>
    <string name="fm_valid_freq_info">Entered frequency invalid.</string>
    <string name="fm_valid_num_info">Entered number invalid.</string>
    <string name="fm_fail_resume_info">Cannot resume Radio!!!!</string>
    <string name="fm_fail_enable_info">Cannot enable Radio!!!!</string>
    <string name="fm_fail_setband_info">Not able to setband!!!!</string>
    <string name="fm_fail_tune_info">Not able to tune!!!!</string>
    <string name="fm_fail_setband_info1">Cannot setBand to selected Value!!!!</string>
    <string name="fm_fail_set_De_Emp_info">Cannot set De-Emp Fileter to selected Value!!!!</string>
    <string name="fm_fail_setmode_info">Not able to setmode!!!!</string>
    <string name="fm_fail_set_channel_space_info">Cannot setChannelSpacing to selected Value!!!!</string>
    <string name="fm_fail_enable_RDS_info">Cannot enable RDS!!!!</string>
    <string name="fm_fail_disable_RDS_info">Cannot disable RDS!!!!</string>
    <string name="fm_fail_set_RDS_info">Cannot set Rds System to selected Value!!!!</string>
    <string name="fm_fail_set_RDS_AF_MODE_info">Cannot set RDS AF Mode ON!!!!</string>
    <string name="fm_fail_set_WRAP_SEEK_MODE_ON_info">Cannot set WRAP SEEK Mode ON!!!!</string>
    <string name="fm_fail_setRSSIThreshold_info">Not able to setRssiThreshold!!!!</string>
    <string name="fm_fail_setmute_info">Not able to setmute!!!!</string>
    <string name="fm_fail_seek_down_info">Not able to seek down!!!!</string>
    <string name="fm_fail_seek_up_info">Not able to seek up!!!!</string>
    <string name="fm_fail_compScan_weather_band_info">Complete Scan is not available for Weather Band</string>
    <string name="fm_stop_compScan_info">Stoping Complete Scan</string>
    <string name="fm_fail_compScan_info">Not able to do complete scan!!!!</string>
    <string name="dialog_imput_freq">input frequency</string>
    <string name="freqRangeEurope">87500KHz - 108000KHz</string>
    <string name="replace_station">Replace</string>
    <string name="delete_station">Delete</string>
</resources>
