<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:id="@id/ParentLayout" android:background="@drawable/wallpaper8" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <ScrollView android:id="@id/scrollview1" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_weight="1.0">
        <LinearLayout android:orientation="vertical" android:id="@id/widget224" android:layout_width="fill_parent" android:layout_height="fill_parent">
            <LinearLayout android:id="@id/widget29" android:layout_width="fill_parent" android:layout_height="50.0dip" android:layout_below="@id/widget28" android:layout_alignParentLeft="true">
                <CheckBox android:textSize="20.0sp" android:id="@id/chbRdsmode" android:layout_width="fill_parent" android:layout_height="fill_parent" android:layout_marginLeft="15.0dip" android:text="@string/rdsmode" android:layout_weight="1.0" />
                <CheckBox android:textSize="20.0sp" android:id="@id/chbSetRdsAf" android:layout_width="fill_parent" android:layout_height="fill_parent" android:text="@string/rdsaf" android:layout_weight="1.0" />
            </LinearLayout>
            <LinearLayout android:id="@id/widget30" android:layout_width="fill_parent" android:layout_height="50.0dip" android:layout_below="@id/widget29" android:layout_alignParentLeft="true">
                <CheckBox android:textSize="20.0sp" android:id="@id/chbSetWrapSeek" android:layout_width="fill_parent" android:layout_height="fill_parent" android:layout_marginLeft="15.0dip" android:text="@string/wrapseek" android:layout_weight="1.0" />
            </LinearLayout>
            <LinearLayout android:id="@id/widget171" android:layout_width="fill_parent" android:layout_height="50.0dip" android:layout_marginTop="10.0dip" android:layout_below="@id/widget30" android:layout_alignParentLeft="true">
                <TextView android:textSize="18.0sp" android:id="@id/txtRdsSystem" android:layout_width="fill_parent" android:layout_height="fill_parent" android:layout_marginLeft="15.0dip" android:text="@string/rdssystem" android:layout_weight="1.0" />
                <Spinner android:id="@id/spnRdsSystem" android:layout_width="fill_parent" android:layout_height="fill_parent" android:layout_marginRight="15.0dip" android:layout_weight="1.0" />
            </LinearLayout>
            <LinearLayout android:id="@id/widget170" android:layout_width="fill_parent" android:layout_height="50.0dip" android:layout_below="@id/widget171" android:layout_alignParentLeft="true">
                <TextView android:textSize="18.0sp" android:id="@id/txtBand" android:layout_width="fill_parent" android:layout_height="fill_parent" android:layout_marginLeft="15.0dip" android:text="@string/band" android:layout_weight="1.0" />
                <Spinner android:id="@id/spnBand" android:layout_width="fill_parent" android:layout_height="fill_parent" android:layout_marginRight="15.0dip" android:layout_weight="1.0" />
            </LinearLayout>
            <LinearLayout android:id="@id/widget174" android:layout_width="fill_parent" android:layout_height="50.0dip" android:layout_below="@id/widget170" android:layout_alignParentLeft="true">
                <TextView android:textSize="18.0sp" android:id="@id/txtMode" android:layout_width="fill_parent" android:layout_height="fill_parent" android:layout_marginLeft="15.0dip" android:text="@string/mode" android:layout_weight="1.0" />
                <Spinner android:textSize="18.0sp" android:id="@id/spnMode" android:layout_width="fill_parent" android:layout_height="fill_parent" android:layout_marginRight="15.0dip" android:layout_weight="1.0" />
            </LinearLayout>
            <LinearLayout android:id="@id/widget173" android:layout_width="fill_parent" android:layout_height="50.0dip" android:layout_below="@id/widget172" android:layout_alignParentLeft="true">
                <TextView android:textSize="18.0sp" android:id="@id/txtChannelSpacing" android:layout_width="fill_parent" android:layout_height="fill_parent" android:layout_marginLeft="15.0dip" android:text="@string/channelSpace" android:layout_weight="1.0" />
                <Spinner android:textSize="18.0sp" android:id="@id/spnChannelSpace" android:layout_width="fill_parent" android:layout_height="fill_parent" android:layout_marginRight="15.0dip" android:layout_weight="1.0" />
            </LinearLayout>
            <LinearLayout android:id="@id/widget207" android:paddingRight="10.0dip" android:layout_width="fill_parent" android:layout_height="50.0dip" android:layout_below="@id/widget173" android:layout_alignParentLeft="true">
                <TextView android:textSize="18.0sp" android:id="@id/txtRssi" android:layout_width="fill_parent" android:layout_height="fill_parent" android:layout_marginLeft="15.0dip" android:text="@string/rssi" android:layout_weight="1.0" />
                <EditText android:textSize="18.0sp" android:id="@id/Rssi" android:layout_width="fill_parent" android:layout_height="fill_parent" android:layout_marginLeft="8.0dip" android:layout_marginRight="8.0dip" android:text="@string/empty" android:layout_weight="1.0" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
    <LinearLayout android:id="@id/widget173" android:layout_width="fill_parent" android:layout_height="50.0dip">
        <Button android:id="@id/btnOk" android:layout_width="wrap_content" android:layout_height="fill_parent" android:text="@string/btnOk" android:layout_weight="1.0" />
        <Button android:id="@id/btnCancel" android:layout_width="wrap_content" android:layout_height="fill_parent" android:text="@string/btnCancel" android:layout_weight="1.0" />
    </LinearLayout>
</LinearLayout>