<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="horizontal" android:background="#00000000" android:layout_width="fill_parent" android:layout_height="wrap_content"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <TextView android:textSize="24.0sp" android:textStyle="bold" android:id="@id/list_key" android:layout_width="20.0dip" android:layout_height="40.0dip" android:layout_marginLeft="15.0dip" android:layout_marginRight="15.0dip" android:text="@string/index" />
    <TextView android:textSize="24.0sp" android:textStyle="bold" android:id="@id/list_value" android:layout_width="90.0dip" android:layout_height="40.0dip" android:text="@string/freq" />
    <TextView android:textSize="18.0sp" android:textStyle="bold" android:ellipsize="marquee" android:id="@id/list_name" android:layout_width="160.0dip" android:layout_height="40.0dip" android:text="@string/name" android:singleLine="true" />
</LinearLayout>